fix active page bug in papers

--- a/templates/add_paper.html
+++ b/templates/add_paper.html
@@ -1,5 +1,5 @@
-{% set active_page = "Add Paper" %}
-{% set page_title = "Add Paper" %}
+{% set active_page = "Papers" %}
+{% set page_title = "Papers" %}
 
 {% extends "base.html" %}
 
