--- a/templates/join_us.html
+++ b/templates/join_us.html
@@ -51,7 +51,7 @@
 
 <!-- Acknowledgements Section -->
 <p class="infopage-title-1">Acknowledgements</p>
-<p class="infopage-text">This website was built on top of <a class="blue-hyper-link" href="https://github.com/Mini-Conf/Mini-Conf" target="_blank">MiniConf</a> and inspired by <a class="blue-hyper-link" href="https://github.com/brownvc/neural-fields-review" target="_blank">Neural Fields in Visual Computing</a> project.
+<p class="infopage-text">This website was built on top of <a class="blue-hyper-link" href="https://github.com/Mini-Conf/Mini-Conf" target="_blank">MiniConf</a> and <a class="blue-hyper-link" href="https://github.com/brownvc/neural-fields-review" target="_blank">Neural Fields in Visual Computing</a> project.
 </p>
 
 
