--- a/templates/join_us.html
+++ b/templates/join_us.html
@@ -25,12 +25,9 @@
 
 <!-- Become a contributor -->
 <p class="infopage-title-1">Become a moderator</p>
-<p class="infopage-text"> We hope that this database becomes an asset of our community,
-    so we welcome anyone interested to become a moderator for the database. 
-    You can help by submitting new papers, and review paper submissions.
-    Please let us know via this short 
-    <a class="blue-hyper-link" href="https://docs.google.com/forms/d/e/1FAIpQLSeu0vga6L3YavgMbKKRsTCam-i-b8QHV1JdG9HzLUilEBXv2A/viewform">Google Form</a>
-    if you are interested!
+<p class="infopage-text"> We welcome anyone interested in helping to maintain this website to become a moderator. The main tasks will be reviewing paper submissions and updating the database regularly.
+    Please let us know if you are interested via this 
+    <a class="blue-hyper-link" href="https://forms.gle/akuxztczAJtVuAMdA">Google Form</a>.
 </p>
 
 
