--- a/templates/add_paper.html
+++ b/templates/add_paper.html
@@ -52,8 +52,8 @@
     <br/>
     *Changes will be reflected on the website within a few days.
     <br/>
-    <p class="infopage-title-1">Join us</p>
-    <p class="infopage-text">We are looking for volunteers who can moderate and maintain this database. See <a class="red-hyper-link" href="join_us.html" target="_blank">Join Us</a> tab.</p>
+<!--     <p class="infopage-title-1">Join us</p>
+    <p class="infopage-text">We are looking for volunteers who can moderate and maintain this website. See <a class="red-hyper-link" href="join_us.html" target="_blank">Join Us</a> tab.</p> -->
 
     <!-- <p class="infopage-title-1">Optional steps</p>
     <p class="infopage-text">If you would like to see the changes reflected more immediately, please follow these additional
