--- a/templates/index_base.html
+++ b/templates/index_base.html
@@ -87,7 +87,7 @@
     {% set navigation_bar = [
     ('index.html', 'Home'),
     ('papers.html', 'Papers'),
-    ('faq.html', 'Meetings'),
+    ('meetings.html', 'Meetings'),
     ('join_us.html', 'Join Us'),
     ('faq.html', 'FAQ')
     ] -%}
